--- a/assets/flat-ui/bootstrap/css/bootstrap.css
+++ b/assets/flat-ui/bootstrap/css/bootstrap.css
@@ -288,12 +288,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #428bca;
+  color: #000000;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #2a6496;
+  color: #ffffff;
   text-decoration: underline;
 }
 a:focus {
@@ -5567,7 +5567,7 @@ button.close {
 .carousel-caption {
   position: absolute;
   right: 15%;
-  /*bottom: 20px;*/
+  bottom: 20px;
   left: 15%;
   z-index: 10;
   padding-top: 20px;
