--- a/assets/css/announcements.css
+++ b/assets/css/announcements.css
@@ -2,3 +2,43 @@
 {
 	margin-bottom: 20px;
 }
+
+body
+{
+	text-align: justify;
+}
+
+.panel, .panel-heading
+{
+	border-radius: 0 !important;
+}
+.panel-red {
+  border-color: #2980b9;
+  margin-bottom: 5px;
+}
+.panel-red > .panel-heading {
+  background-color: #2980b9;
+  border-color: #2980b9;
+  padding: 5px;
+}
+
+.panel-heading a
+{
+  color: #fff !important;
+}
+.panel-red > .panel-heading + .panel-collapse > .panel-body {
+  border-top-color: #2980b9;
+}
+.panel-red > .panel-heading .badge {
+  color: #f5f5f5;
+  background-color: #2980b9;
+}
+.panel-red > .panel-footer + .panel-collapse > .panel-body {
+  border-bottom-color: #e67e22;
+}
+
+.panel-body ol li
+{
+	font-family: times, tahoma, helvetica;
+	font-size: 110%;
+}
