--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,5 +1,9 @@
 @import '../css/grid.css';
-@import '../css/font-awesome.css';
+@import '..font-awesome/css/font-awesome.css';
+@import '../font-awesome/fonts/fontawesome-webfont.eot';
+@import '../font-awesome/fonts/fontawesome-webfont.svg';
+@import '../font-awesome/fonts/fontawesome-webfont.ttf';
+@import '../font-awesome/fonts/fontawesome-webfont.woff';
 @import url(//fonts.googleapis.com/css?family=Open+Sans:400);
 @import url(//fonts.googleapis.com/css?family=Open+Sans:300);
 @import url(//fonts.googleapis.com/css?family=Open+Sans:600);
@@ -7,6 +11,7 @@
 @import url(//fonts.googleapis.com/css?family=Open+Sans:300italic);
 @import url(//fonts.googleapis.com/css?family=Roboto+Condensed:400);
 @import url(//fonts.googleapis.com/css?family=Roboto+Condensed:300);
+
 .navigation {
   z-index: 999;
   position: relative;
@@ -212,10 +217,10 @@ h6 {
   font-family: 'Roboto Condensed', sans-serif;
 }
 h2 {
-  color: #00b1ba;
+  color: #54c8ff;
   font-size: 55px;
   line-height: 72px;
-  margin-top: -18px;
+  margin-top: -10px;
   margin-bottom: 32px;
 }
 h2.head__1 {
@@ -390,8 +395,9 @@ header {
   display: block;
   position: relative;
   z-index: 999;
-  padding: 18px 0 77px;
-  background: url(../images/slide.jpg) center 0 no-repeat;
+  width: 100%!important;
+  background: url(../images/university.jpg) center 0 no-repeat;
+  background-size: cover;
 }
 header .rel {
   z-index: 999;
@@ -420,7 +426,7 @@ header h1.stuck_head {
   padding-top: 13px;
 }
 .page1_header .banner {
-  background-color: #088389;
+  background-color: #086587;
   color: #ffffff;
   display: block;
   width: 50%;
@@ -436,10 +442,10 @@ header h1.stuck_head {
   line-height: 48px;
 }
 .page1_header .banner:first-child + .banner {
-  background-color: #00b1ba;
+  background-color: #0091c6;
 }
 .page1_header .banner:first-child + .banner + .banner {
-  background-color: #00b1ba;
+  background-color:#0091c6;
 }
 .page1_header .banner + .banner + .banner {
   padding-top: 63px;
@@ -474,7 +480,7 @@ header h1.stuck_head {
 /****Non suppage set****/
 .page1 header {
   border-bottom: 1px solid #fff;
-  padding-bottom: 51px;
+  /*padding-bottom: 51px;*/
 }
 .page1 #content {
   padding-bottom: 68px;
@@ -486,7 +492,7 @@ header h1.stuck_head {
 /****Blocks****/
 .block-1 {
   font: 20px/30px 'Roboto Condensed', sans-serif;
-  background-color: #088389;
+  background-color: #064E69;
   color: #ffffff;
   font-size: 20px;
   line-height: 30px;
@@ -875,3 +881,47 @@ a.color1:hover {
     margin-bottom: 30px;
   }
 }
+
+/****CUSTOM CSS ****/
+.top_icon{
+  max-width: 165px;
+  max-height: 219px;
+  margin:10px 0;
+}
+
+.float-left{
+  float: left;
+}
+
+.float-right{
+  float: right;
+}
+
+.no-margin{
+  margin:0;
+}
+
+.no-margin-bottom{
+  margin-bottom: 0;
+}
+
+.light-blue{
+  background:#08ADEF;
+}
+
+.light-blue-color{
+  color:#08ADEF;
+}
+
+.dark-blue{
+  background:#00006B;
+}
+
+.tint{
+  background: rgba(43, 44, 44, 0.6);
+  padding-bottom: 50px;
+  margin:0;
+  width: 100%!important;
+  height: 100%!important;
+}
+/****END OF CUSTOM CSS ****/
