--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2035,7 +2035,8 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', end
 .table{
 	border-radius: 0;
 	padding: 0!important;
-	width:1700px!important;
+	/*width:1700px;*/
+	/*width:1700px!important;*/
 }
 .btn-box{
 	box-shadow: none;
