--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -471,3 +471,11 @@ strong, b{
   
   font-size: 25px;
 }
+
+.str{
+  font-weight: bold;
+}
+
+.table-hover > tbody > tr:hover > td, .table-hover > tbody > tr:hover > th{
+  background-color: #FF0000;
+}
