I dont know what /i did

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -479,3 +479,7 @@ strong, b{
 .table-hover > tbody > tr:hover > td, .table-hover > tbody > tr:hover > th{
   background-color: #FF0000;
 }
+
+footer a:hover{
+  color:#0033CC;
+}
