--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -485,7 +485,7 @@ footer a:hover{
 }
 
 .billboard.light{
-  background-image: url('../images/green.jpg');
+  background-image: url('../images/uni2.jpg');
 }
 
 .buzconc{
@@ -550,6 +550,43 @@ margin: 30px 20px;
 
 }
 
+.billboard .caption.dark h1, h4{
+  color:#001A66;
+  
+}
+
+.topabout{
+  background-color: #FFF;
+  opacity:0.7;
+}
+
+header.dark nav ul li a{
+  color:#000099;
+  
+  text-align: center;
+}
+
+header.dark nav ul li a:hover{
+  text-decoration: underline;
+}
+
+header nav{
+  float:left;
+  margin-left: 200px;
+
+}
+
+#nav ul li{
+  font-size: 60px;
+}
+
+#nav ul li a.active span{
+  font-size: 30px;
+}
+
+.offered{
+  font-size: 25px;
+}
 
 
 
