--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -25,7 +25,7 @@
 .navigation nav {
   position: relative;
   padding: 0;
-  background-color: #FFF;
+  /*background-color: #FFF;*/
 }
 .select-menu {
   display: none !important;
