--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -14,12 +14,12 @@
 
 .navigation {
   z-index: 999;
-  position: relative;
-  /*left: -20px;*/
-  padding: 35px 0;
-  background: rgba(40, 40, 60, 0.5);
-  width:1100px;
-  margin-top: 10px;
+position: relative;
+left: -80px;
+padding: 42px 0;
+background: rgba(40, 40, 60, 0.5);
+width: 1050px;
+margin-top: 2px;
 }
 .navigation .sf-menu {
   z-index: 990;
@@ -88,7 +88,7 @@
 .sf-menu > li.sfHover > a,
 .sf-menu > li.current > a,
 .sf-menu > li > a:hover {
-  color: #00b1ba;
+  color: #54C8FF;
 }
 /*==================================RESPONSIVE LAYOUTS===============================================*/
 @media only screen and (max-width: 767px) {
@@ -151,6 +151,7 @@
   .isStuck {
     background-color: #000;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
+    margin-left: 290px!important;
   }
 }
 @media only screen and (max-width: 979px) {
@@ -226,9 +227,9 @@ h6 {
 }
 h2 {
   color: #54c8ff;
-  font-size: 55px;
-  line-height: 72px;
-  margin-top: -10px;
+  font-size: 47px;
+  line-height: 60px;
+  margin-top: 0px;
   margin-bottom: 32px;
 }
 h2.head__1 {
@@ -406,6 +407,7 @@ header {
   position: relative;
   z-index: 999;
   width: 100%!important;
+  height:100%!important;
   background: url(../images/university.jpg) center 0 no-repeat;
   background-size: cover;
 }
@@ -439,16 +441,16 @@ header h1.stuck_head {
   background-color: #086587;
   color: #ffffff;
   display: block;
-  width: 50%;
+  width: 43%;
   text-align: center;
   float: left;
   font-size: 18px;
-  padding: 59px 0 14px;
+  padding: 30px 0 10px;
 }
 .page1_header .banner .fa {
   margin-bottom: 27px;
   display: block;
-  font-size: 72px;
+  font-size: 55px;
   line-height: 48px;
 }
 .page1_header .banner:first-child + .banner {
@@ -458,8 +460,8 @@ header h1.stuck_head {
   background-color:#0091c6;
 }
 .page1_header .banner + .banner + .banner {
-  padding-top: 63px;
-  padding-bottom: 13px;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 .page1_header .banner.maxheight1 .fa {
   margin-bottom: 26px;
@@ -821,7 +823,8 @@ a.color1:hover {
     margin-left: 60px;
   }
   .page1 header {
-    padding-bottom: 45px;
+    /*padding-bottom: 45px;*/
+    height:1200px!important;
   }
   .support {
     margin-top: 0 !important;
@@ -896,7 +899,7 @@ a.color1:hover {
 .top_icon{
   max-width: 165px;
   max-height: 219px;
-  margin:10px 0;
+  margin:2px 0;
 }
 .login_link{
     right: 0;
@@ -962,5 +965,8 @@ a.color1:hover {
 }
 .btn{
   border-radius: 0!important;
+}
+.margin-top-img{
+  margin: 80px 0;
 }
 /****END OF CUSTOM CSS ****/
