--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -415,6 +415,16 @@ background-image: url('../images/topundergraduateform.jpg');
   color: #FFFFFF;
 }
 
+.sf-menu > li.sfHover > a,
+.sf-menu > li.current > a,
+.sf-menu > li > a:hover {
+  color: #54C8FF;
+}
+
+.mynav > nav > ul > li > a:hover{
+  color: #54C8FF!important;
+}
+
 td .form-name{
   width:150px;
 }
@@ -606,7 +616,7 @@ header.dark nav ul li a:hover{
 
 header nav{
   float:left;
-  margin-left: 200px;
+  margin-left: 50px;
 
 }
 
