--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -658,10 +658,23 @@ color: #FFFFFF !important;
 
 .greet{
   height: 700px;
+ background: url(../images/graduate.jpg) center 0 no-repeat !important;
+  /*background-image: url('../images/graduate.jpg');*/
+  background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+     -moz-background-size: cover;
+       -o-background-size: cover;
+    background-size: cover;
 }
 
 .head__1{
   margin-top: 200px;
+}
+
+.welcomeimg{
+    
 }
 
 
