--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -585,8 +585,8 @@ margin: 30px 20px;
 }
 
 .billboard .caption.dark h1, h4{
-  color:#FFF;
-  font-size: 15px;
+  color:#000;
+  font-size: 24px;
 }
 
 p.para{
