--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -677,19 +677,12 @@ color: #FFFFFF !important;
 }
 
 /*.greet{
-  height: 700px;
+  
   width: 100%;
  background: url(../images/uni5.jpg) center 0 no-repeat !important;
+}*/  
+
   
-  background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-     -moz-background-size: cover;
-       -o-background-size: cover;
-    background-size: cover;
-  
-}*/
 
 .head__1{
   margin: 0px;
@@ -712,6 +705,7 @@ color: #FFFFFF !important;
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
+    width:100%;
 }
 
 
