--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2009,6 +2009,11 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', end
 .margin-vert{
 	margin:5px 0;
 }
+
+.table-embedded{
+	width: 100% !important;
+	margin:1px !important;
+}
 /*END OF CUSTOM CSS*/
 
 /*OVERRIDDEN BOOTSTRAP AND OTHER CSS*/
