--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -14,12 +14,12 @@
 
 .navigation {
   z-index: 999;
-  position: relative;
-  /*left: -20px;*/
-  padding: 35px 0;
-  background: rgba(40, 40, 60, 0.5);
-  width:900px;
-  margin-top: 10px;
+position: relative;
+left: -80px;
+padding: 42px 0;
+background: rgba(40, 40, 60, 0.5);
+width: 1050px;
+margin-top: 2px;
 }
 .navigation .sf-menu {
   z-index: 990;
@@ -406,6 +406,7 @@ header {
   position: relative;
   z-index: 999;
   width: 100%!important;
+  height: 100%!important;
   background: url(../images/university.jpg) center 0 no-repeat;
   background-size: cover;
 }
@@ -896,7 +897,7 @@ a.color1:hover {
 .top_icon{
   max-width: 165px;
   max-height: 219px;
-  margin:10px 0;
+  margin:2px 0;
 }
 .login_link{
     right: 0;
@@ -936,10 +937,10 @@ a.color1:hover {
 
 .tint{
   background: rgba(43, 44, 44, 0.6);
-  padding-bottom: 50px;
+  padding: 46px 0px 60px;
   margin:0;
   width: 100%!important;
-  height: 100%!important;
+  height: 100vh!important;
 }
 
 .margin-right-sm{
